[package]
name = "kita98"
version = "0.1.0"
edition = "2021"
description = "PC-98-like x86 runtime"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dynasm = "3.0.0"
dynasmrt = "3.0.0"
pixels = "0.16.0"
winit = "=0.29.15"
bitflags = "2.4"
image = "0.24"
